# MUSE-NGC6153

./: .gitignore  README.md  pyproject.toml
module/: ICF_ABUND_NGC6153.ipynb  diagnostics.py  figuras_articulo.py  ionic_abund.py  obs_int.py  observation.py  omega_1_mask.joblib  omega_mask.joblib  w_pred_CatBoost.joblib  w_pred_convolved.joblib
module/ai4neb/: Ar3Cl3.ai4neb_sk  Ar3S2.ai4neb_sk  Ar4Ar4.ai4neb_sk  Ar4Cl3.ai4neb_sk  Ar4S2.ai4neb_sk  N2S2.ai4neb_sk  N2S2_84.ai4neb_sk  S3Ar4.ai4neb_sk  S3Cl3.ai4neb_sk  S3S2.ai4neb_sk
module/constants/: observation_parameters.py  wcs_NGC6153.joblib
module/paper_tables/: O_mass_frac.tex  int_fluxes.tex  int_tene.tex  ionic_ab_7_recipes.tex
module/utils/: misc.py  plots.py
